--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,10 @@
 version: '3'
 
 services:
-  hello-world:
-    build:
-      context: frontend_mocked/
+  frontend:
+    build: 
+      context: frontend/
       dockerfile: Dockerfile
-    ports:
-      - "80"
-
   oauth2-proxy:
     ports:
       - "4180:4180"
@@ -16,7 +13,7 @@ services:
       - --http-address
       - 0.0.0.0:4180 #localhost:4180
     environment:
-      OAUTH2_PROXY_UPSTREAMS: "http://hello-world:80/"
+      OAUTH2_PROXY_UPSTREAMS: "http://frontend"
       OAUTH2_PROXY_CLIENT_ID: 936638621086-ukfhb28p7pkbjup42pgvjq4br9ce0h86.apps.googleusercontent.com
       OAUTH2_PROXY_CLIENT_SECRET: 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
       OAUTH2_PROXY_COOKIE_SECRET: _-vsNPgMZKXBRGWutZsIgeyB9Dzx-4aRNQwfX-zuDyo=
