--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - 0.0.0.0:4180 #localhost:4180
     environment:
       OAUTH2_PROXY_UPSTREAMS: "http://frontend"
-      OAUTH2_PROXY_CLIENT_ID: 936638621086-ukfhb28p7pkbjup42pgvjq4br9ce0h86.apps.googleusercontent.com
+      OAUTH2_PROXY_CLIENT_ID: 936638621086-ukfhb28p7pkbjup42pgvjq4br9ce0h86.frontends.googleusercontent.com
       OAUTH2_PROXY_CLIENT_SECRET: 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
       OAUTH2_PROXY_COOKIE_SECRET: _-vsNPgMZKXBRGWutZsIgeyB9Dzx-4aRNQwfX-zuDyo=
       OAUTH2_PROXY_HTTPS_REDIRECT: "false"
