--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
   oauth2-proxy:
     ports:
       - "4180:4180"
-    image: bitnami/oauth2-proxy:7.3.0
+    image: bitnami/oauth2-proxy:latest
     command:
       - --http-address
       - 0.0.0.0:4180 #localhost:4180
