fix application build

--- a/docker/frontend/Dockerfile
+++ b/docker/frontend/Dockerfile
@@ -2,9 +2,9 @@ FROM debian-base
 
 RUN mkdir app/
 
-COPY frontend.exe app/
+COPY frontend app/
 
 WORKDIR /app
 
-CMD ["./frontend.exe"]
+CMD ["./frontend"]
 
