--- a/docker/worker/Dockerfile
+++ b/docker/worker/Dockerfile
@@ -2,9 +2,9 @@ FROM debian-base
 
 RUN mkdir app/
 
-COPY worker.exe app/
+COPY worker app/
 
 WORKDIR /app
 
-CMD ["./worker.exe"]
+CMD ["./worker"]
 
