--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     #   - "8080:8080"
     environment:
       NATS_SERVER_ADDRESS: nats://nats-server:4222
+      MAX_REQUESTS_PER_CLIENT: 10
     depends_on:
       - debian-base
       - nats-server
