Created sandbox for worker executions

--- a/docker/worker/Dockerfile
+++ b/docker/worker/Dockerfile
@@ -1,5 +1,7 @@
 FROM debian-base
 
+RUN useradd -u 1001 -m -s /bin/bash client && echo "client:client" | chpasswd
+
 RUN mkdir app/
 
 COPY worker app/
