--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     environment:
       NATS_SERVER_ADDRESS: nats://nats-server:4222
       MAX_REQUESTS_PER_CLIENT: 50
-      ADMIN_USERS: alex3galvez@gmail.com joseserranodiaz96@gmail.com
+      ADMIN_USERS: alex3galvez@gmail.com joseserranodiaz96@gmail.com victorialservera@gmail.com
     depends_on:
       - debian-base
       - nats-server
